# workflow

./: .dockerignore  Dockerfile  README.md  config.ini  cosmic-ray.toml  docker-compose.yml  requirements.txt  requirements_tests.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: testing.yml
src/application/: __init__.py  app.py  bus.py  settings.py
src/application/api/: __init__.py  monitors.py  ordering.py  tools.py
src/application/db/: __init__.py  transaction.py
src/application/db/migrations/: env.py
src/currency/: __init__.py  exchange_rate.py  types.py
src/ordering/: __init__.py  commands.py  errors.py  es_service.py  events.py  queries.py  service.py
src/ordering/db/: __init__.py  buy_order.py  interface.py  types.py
src/ordering/db/migrations/: 2021-12-09_buyorder_83b698eb2648.py  2022-10-11_eventsourcery_11ff42b276cd.py
tests/: conftest.py  tools.py
tests/application/: conftest.py  factories.py  test_api.py  test_api_tools.py  test_bus.py  test_monitors.py  test_ordering.py
tests/currency/: factories.py  test_exchange_rate.py
tests/ordering/: factories.py  test_db.py  test_es_service.py  test_queries.py  test_service.py
