[metadata]
name = example-workflow
description = Example project for development workflow. Used on blog http://lukeonpython.blog
author = Łukasz Żukowski
author_email = lukasz.zukowski@gmail.com
maintainer = Łukasz Żukowski
maintainer_email = lukasz.zukowski@gmail.com
keywords = python3
license = AS-IS
platforms = Linux
version = 0.0.1dev
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Development Status :: 1 - Planning
  Environment :: Console
  Intended Audience :: Developers
  Natural Language :: English
  License :: Public Domain
  Operating System :: OS Independent
  Operating System :: POSIX :: Linux
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = True
include_package_data = True
python_requires = >=3.9
package_dir=
  =src
packages = find:

[options.packages.find]
where=src

[coverage:run]
branch = True

[coverage:report]
fail_under = 100
omit =
  */migrations/*
exclude_lines =
  pragma: no cover
  def __repr__
  def __str__
  @abstractmethod
  raise NotImplementedError
  raise

[pycodestyle]
max_line_length = 80
show_pep8 = True
show_source = True

[flake8]
max-line-length = 80
